; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_line0.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_line0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @desa_line0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @desa_line0() #0 {
  %1 = call i64 (...) @check_desa_movep()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %18

4:                                                ; preds = %0
  %5 = call i64 (...) @check_desa_bitop()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %4
  br label %18

8:                                                ; preds = %4
  %9 = call i64 (...) @check_desa_IMM_SR()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  br label %18

12:                                               ; preds = %8
  %13 = call i64 (...) @check_desa_imm_op()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  br label %18

16:                                               ; preds = %12
  %17 = call i32 (...) @desa_dcw()
  br label %18

18:                                               ; preds = %3, %7, %11, %15, %16
  ret void
}

declare dso_local i64 @check_desa_movep(...) #1

declare dso_local i64 @check_desa_bitop(...) #1

declare dso_local i64 @check_desa_IMM_SR(...) #1

declare dso_local i64 @check_desa_imm_op(...) #1

declare dso_local i32 @desa_dcw(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
